# openapi/openapi.yml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   title: API oPROsita
   description: API REST para gestión de grupos, usuarios, contenido y simulacros
-  version: 1.2.3
+  version: 1.3.3
 
 servers:
   - url: http://localhost:8080/api
@@ -260,7 +260,15 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Alumno'
+              type: object
+              properties:
+                id:
+                  type: integer
+                  description: ID del alumno a añadir al grupo
+              required:
+                - id
+              example:
+                id: 2
       responses:
         '201':
           description: Alumno añadido
@@ -338,6 +346,9 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/Profesor'
+            example:
+              id: 3
+              grupoIds: [ 1 ]
       responses:
         '201':
           description: Profesor añadido
@@ -561,6 +572,12 @@ paths:
                 file:
                   type: string
                   format: binary
+                autorId:
+                  type: integer
+              required:
+                - texto
+                - tipoContenido
+                - autorId
       responses:
         '201':
           description: Contenido creado correctamente
